update to mirror Gitlab repo

--- a/cookies.tex
+++ b/cookies.tex
@@ -23,9 +23,10 @@ Cookies are most commonly baked until crisp or just long enough that they remain
 \begin{itemize}
 	\item Butter cookie
 	\item Chocolate cookie
-	\item Vanillekipferl
+	\item Vanillekipferl (German vanilla cookies)
 	\item Springerle
-	\item Medenki (Bulgarian honey cookies)
+	\item Florentine biscuit
+	\item Rock cake
 	\item \dots
 \end{itemize}
 
@@ -55,7 +56,7 @@ Rather than evaporating and thickening the mixture, they remain, saturating the 
 This saturation produces the most texturally attractive feature of the cookie, and indeed all fried foods: crispness saturated with a moisture (namely oil) that does not sink into it. 
 
 \subsection{Sample Cookie Recipe}
-%%% TODO!
+There are too many to choose from! Fill in your favorite!
 
 \section{Conclusion and Outlook}
 As you see, cookies are awesome. Go bake some!
